--- a/index.html
+++ b/index.html
@@ -2,18 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png" />
+    <link rel="manifest" href="/favicon-96x96.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Shoppe Lane – Your Boutique Shopping Experience</title>
+    <title>Shoppe Lane – Online Marketplace</title>
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Discover beautifully curated boutique items at Shoppe Lane. Fashion, accessories, gifts, and more — all in one elegant online shop." />
+    <meta name="description" content="Shoppe Lane is a vibrant e-commerce marketplace where trusted sellers offer everything from home essentials to kids’ products, fashion, and more — all in one secure, stylish platform." />
     <meta name="author" content="Shoppe Lane Team" />
 
     <!-- Social Sharing Preview -->
-    <meta property="og:title" content="Shoppe Lane – Boutique Shopping" />
-    <meta property="og:description" content="Explore our charming collections of curated fashion and lifestyle products." />
+    <meta property="og:title" content="Shoppe Lane – Online Marketplace" />
+    <meta property="og:description" content="Shop everything you love — fashion, essentials, lifestyle, and more — from various trusted sellers on Shoppe Lane." />
     <meta property="og:image" content="/images/meta-preview.jpg" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://shoppe-lane.vercel.app" />
