--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png" />
     <link rel="manifest" href="/favicon-96x96.webmanifest" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="/bootstrap-icons-local.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <title>Shoppe Lane – Online Marketplace</title>
 
     <!-- SEO Meta Tags -->
