--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="manifest" href="/favicon-96x96.webmanifest" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
     />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shoppe Lane – Online Marketplace</title>
 
